[project]
name = "seedvr2_cudafull"
description = "Application for upscaling videos and images with multi-GPU support, offering a user-friendly interface and high-quality results with minimal effort."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["einops                   # Tensor operations", "omegaconf>=2.3.0                # Configuration system.", "diffusers>=0.34.0                # Diffusers", "pytorch-extension #pytorch extension", "rotary_embedding_torch", "opencv-python", "peft>=0.15.0"]

[project.urls]
Repository = "https://github.com/sean-hungerford/seedVR2_cudafull"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/sean-hungerford/seedVR2_cudafull/wiki"
"Bug Tracker" = "https://github.com/sean-hungerford/seedVR2_cudafull/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "seedVR2_cudafull"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

